--- a/src/settings.toml
+++ b/src/settings.toml
@@ -32,6 +32,8 @@ font_size = 10                    # -fs <int>
 font_padding = 2                  # -p -fp -fm <int>
 font_aliasing = true              # -fa
 
+chars = []
+
 glyphset = ':all'              # -g  <glyphset | str>
 colorset = ':casual'           # -c <colorset> | <color> [<color> ...]
 background_color = ':c:black'  # -bg <color: r,g,b | #rrggbb | #rgb>
@@ -126,7 +128,7 @@ image_scale_factor = 6  # -x <int>
 tile_side = 10  # -t -p <int>
 
 ledge_length = 2  # -l <int>
-ledge_depth = 2   # -d <int>
+ledge_depth = 2  # -d <int>
 
 line_color = ':c:black'  # -lc <color: r,g,b | #rrggbb | #rgb>
 colorset = ':casual'     # -c <colorset> | <color> [<color> ...]
