--- a/src/settings.toml
+++ b/src/settings.toml
@@ -32,7 +32,7 @@ font_size = 10                    # -fs <int>
 font_padding = 2                  # -p -fp -fm <int>
 font_aliasing = true              # -fa
 
-chars = []
+random_order = false           # -r
 
 glyphset = ':all'              # -g  <glyphset | str>
 colorset = ':casual'           # -c <colorset> | <color> [<color> ...]
